Fix teaser collapse/expand

--- a/resources/assets/sass/_components.slide.scss
+++ b/resources/assets/sass/_components.slide.scss
@@ -29,7 +29,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        z-index: 1;
+        z-index: 3;
     }
 
     .c-slide__wrapper {
